fix(LocalizeRouterHttpLoader): remove conditional load and revert to Angular 4.1 for Http

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "main": "bundles/http-loader.umd.js",
   "module": "index.js",
   "typings": "index.d.ts",
+  "homepage": "https://github.com/Greentube/localize-router-http-loader",
   "peerDependencies": {
     "@angular/common": ">=2.0.0",
     "@angular/core": ">=2.0.0",
@@ -35,16 +36,16 @@
     "localize-router": ">=1.0.0-alpha.1"
   },
   "devDependencies": {
-    "@angular/animations": "4.3.4",
-    "@angular/common": "4.3.4",
-    "@angular/compiler": "4.3.4",
-    "@angular/compiler-cli": "4.3.4",
-    "@angular/core": "4.3.4",
-    "@angular/http": "4.3.4",
-    "@angular/platform-browser": "4.3.4",
-    "@angular/platform-browser-dynamic": "4.3.4",
-    "@angular/platform-server": "4.3.4",
-    "@angular/router": "4.3.4",
+    "@angular/animations": "4.1.0",
+    "@angular/common": "4.1.0",
+    "@angular/compiler": "4.1.0",
+    "@angular/compiler-cli": "4.1.0",
+    "@angular/core": "4.1.0",
+    "@angular/http": "4.1.0",
+    "@angular/platform-browser": "4.1.0",
+    "@angular/platform-browser-dynamic": "4.1.0",
+    "@angular/platform-server": "4.1.0",
+    "@angular/router": "4.1.0",
     "@ngx-translate/core": "7.0.0",
     "@types/es6-promise": "0.0.32",
     "@types/hammerjs": "2.0.34",
