--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@angular/common": ">=4.3.0",
     "@angular/core": ">=4.3.0",
     "@ngx-translate/core": ">=6.0.0",
-    "localize-router": ">=1.0.0-alpha.1"
+    "localize-router": ">=1.0.0-rc.1"
   },
   "devDependencies": {
     "@angular/animations": "4.3.6",
@@ -45,7 +45,7 @@
     "@angular/platform-browser-dynamic": "4.3.6",
     "@angular/platform-server": "4.3.6",
     "@angular/router": "4.3.6",
-    "@ngx-translate/core": "7.0.0",
+    "@ngx-translate/core": "8.0.0",
     "@types/es6-promise": "0.0.32",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.51",
@@ -64,7 +64,7 @@
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "2.0.3",
     "loader-utils": "1.1.0",
-    "localize-router": "1.0.0-alpha.1",
+    "localize-router": "1.0.0-rc.1",
     "reflect-metadata": "0.1.10",
     "rimraf": "2.6.1",
     "rxjs": "5.4.0",
