--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "localize-router-http-loader",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A loader for localize-router that loads config using Http",
   "scripts": {
     "clean": "rimraf bundles coverage src/**/*.d.ts src/**/*.metadata.json src/**/*.js tests/**/*.d.ts tests/**/*.metadata.json tests/**/*.js index.d.ts index.metadata.json index.js",
@@ -32,7 +32,7 @@
     "@angular/common": ">=4.3.0",
     "@angular/core": ">=4.3.0",
     "@ngx-translate/core": ">=6.0.0",
-    "localize-router": ">=1.0.0-rc.1"
+    "localize-router": ">=1.0.0"
   },
   "devDependencies": {
     "@angular/animations": "4.3.6",
