--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "@types/es6-promise": "0.0.32",
     "@types/hammerjs": "2.0.34",
     "@types/jasmine": "2.5.51",
-    "@types/node": "7.0.22",
+    "@types/node": "^7.10.11",
     "awesome-typescript-loader": "3.1.3",
     "clean-webpack-plugin": "0.1.16",
     "codelyzer": "3.0.1",
@@ -67,13 +67,16 @@
     "localize-router": "1.0.0-rc.1",
     "reflect-metadata": "0.1.10",
     "rimraf": "2.6.1",
-    "rxjs": "5.4.0",
+    "rxjs": "^6.5.2",
     "source-map-loader": "0.2.1",
     "ts-helpers": "1.1.2",
     "tslint": "5.4.3",
     "tslint-loader": "3.5.3",
-    "typescript": "2.3.4",
+    "typescript": "^3.9.5",
     "webpack": "3.5.5",
     "zone.js": "0.8.11"
+  },
+  "dependencies": {
+    "rxjs-compat": "^6.5.5"
   }
 }
